--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -53,6 +53,7 @@ jobs:
         fi 
     - name: Configuring
       run: |
+        echo "Starting to configure local.conf"
         rm -f conf/local.conf
         . ./${BRANCH}/poky/oe-init-build-env ${BRANCH}/build
         if [[ ! $(grep meta-mono/meta-mono/${BRANCH}/meta-mono conf/bblayers.conf) ]]; then
@@ -64,12 +65,12 @@ jobs:
         if [[ ! $(grep PREFERRED_VERSION_mono conf/local.conf) ]]; then
           echo "PREFERRED_VERSION_mono='${MONO_VERSION}'" >> conf/local.conf
           echo "PREFERRED_VERSION_mono-native='${MONO_VERSION}'" >> conf/local.conf
-          echo "mono version: ${MONO_VERSION}"
+          echo "mono version: $MONO_VERSION"
         fi
         if [[ ! $(grep PREFERRED_VERSION_dotnet conf/local.conf) ]]; then
           echo "PREFERRED_VERSION_dotnet='${DOTNET_VERSION}'" >> conf/local.conf
           echo "PREFERRED_VERSION_dotnet-native='${DOTNET_VERSION}'" >> conf/local.conf
-          echo "dotnet version: ${DOTNET_VERSION}"
+          echo "dotnet version: $DOTNET_VERSION"
         fi
         if [[ ! $(grep rm_work conf/local.conf) ]]; then
           echo "INHERIT += ' rm_work '" >> conf/local.conf
