ci: fix forced local.conf remove

--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Configuring
       run: |
         echo "Starting to configure local.conf"
-        rm -f conf/local.conf
+        rm -f ${BRANCH}/build/conf/local.conf
         . ./${BRANCH}/poky/oe-init-build-env ${BRANCH}/build
         if [[ ! $(grep meta-mono/meta-mono/${BRANCH}/meta-mono conf/bblayers.conf) ]]; then
           echo "BBLAYERS += '$GITHUB_WORKSPACE/${BRANCH}/meta-mono'" >> conf/bblayers.conf
