--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -53,43 +53,42 @@ jobs:
         fi 
     - name: Configuring
       run: |
-        echo "### Starting to configure local.conf and bblayers.conf ###"
         rm -f ${BRANCH}/build/conf/local.conf
         rm -f ${BRANCH}/build/conf/bblayers.conf
         . ./${BRANCH}/poky/oe-init-build-env ${BRANCH}/build
-        if [[ ! $(grep meta-mono/meta-mono/${BRANCH}/meta-mono conf/bblayers.conf) ]]; then
-          echo "BBLAYERS += '$GITHUB_WORKSPACE/${BRANCH}/meta-mono'" >> conf/bblayers.conf
-        fi
-        if [[ ! $(grep meta-openembedded conf/bblayers.conf) ]]; then
-          echo "BBLAYERS += '$GITHUB_WORKSPACE/${BRANCH}/meta-openembedded/meta-oe'" >> conf/bblayers.conf
-        fi
-        if [[ ! $(grep PREFERRED_VERSION_mono conf/local.conf) ]]; then
-          echo "PREFERRED_VERSION_mono='${MONO_VERSION}'" >> conf/local.conf
-          echo "PREFERRED_VERSION_mono-native='${MONO_VERSION}'" >> conf/local.conf
-          echo "mono version: $MONO_VERSION"
-        fi
-        if [[ ! $(grep PREFERRED_VERSION_dotnet conf/local.conf) ]]; then
-          echo "PREFERRED_VERSION_dotnet='${DOTNET_VERSION}'" >> conf/local.conf
-          echo "PREFERRED_VERSION_dotnet-native='${DOTNET_VERSION}'" >> conf/local.conf
-          echo "dotnet version: $DOTNET_VERSION"
-        fi
-        if [[ ! $(grep rm_work conf/local.conf) ]]; then
-          echo "INHERIT += ' rm_work '" >> conf/local.conf
-        fi
+
+        # Append custom variables for regenerated local.conf and bblayers.conf samples
+        echo "### Starting to configure local.conf and bblayers.conf ###"
+        echo "mono version: $MONO_VERSION"
+        echo "dotnet version: $DOTNET_VERSION"
+
+        echo "BBLAYERS += '$GITHUB_WORKSPACE/${BRANCH}/meta-mono'" >> conf/bblayers.conf
+        echo "BBLAYERS += '$GITHUB_WORKSPACE/${BRANCH}/meta-openembedded/meta-oe'" >> conf/bblayers.conf
+
+        echo "MACHINE=\"qemu${ARCH}\"" >> conf/local.conf
+        echo "DL_DIR=\"$GITHUB_WORKSPACE/downloads\"" >> conf/local.conf
+
+        echo "PREFERRED_VERSION_mono=\"${MONO_VERSION}\"" >> conf/local.conf
+        echo "PREFERRED_VERSION_mono-native=\"${MONO_VERSION}\"" >> conf/local.conf
+
+        echo "PREFERRED_VERSION_dotnet=\"${DOTNET_VERSION}\"" >> conf/local.conf
+        echo "PREFERRED_VERSION_dotnet-native=\"${DOTNET_VERSION}\"" >> conf/local.conf
+
+        echo "INHERIT += \" rm_work \"" >> conf/local.conf
         sed -i 's/#IMAGE_CLASSES += "testimage testsdk"/IMAGE_CLASSES += "testimage "/' conf/local.conf
+    - name: Cleaning
+      run: |
+        . ./${BRANCH}/poky/oe-init-build-env ${BRANCH}/build
+        bitbake -c cleanall test-image-mono mono mono-native mono-helloworld msbuild msbuild-native dotnet dotnet-native python3-clr-loader python3-clr-loader-native dotnet-helloworld python3-pythonnet
     - name: Building
       run: |
         . ./${BRANCH}/poky/oe-init-build-env ${BRANCH}/build
-
-        export BB_ENV_PASSTHROUGH_ADDITIONS="${BB_ENV_PASSTHROUGH_ADDITIONS} MACHINE DL_DIR"
-        env MACHINE="qemu${ARCH}" DL_DIR="$GITHUB_WORKSPACE/downloads" bitbake -k test-image-mono
+        bitbake -k test-image-mono
     - name: Testing
       run: |
         . ./${BRANCH}/poky/oe-init-build-env ${BRANCH}/build
-
-        export BB_ENV_PASSTHROUGH_ADDITIONS="${BB_ENV_PASSTHROUGH_ADDITIONS} MACHINE DL_DIR"
         export TERM=linux
-        env MACHINE="qemu${ARCH}" DL_DIR="$GITHUB_WORKSPACE/downloads" bitbake test-image-mono -c testimage
+        bitbake test-image-mono -c testimage
     - name: Store artifacts
       uses: actions/upload-artifact@v3
       with:
