ci: Suppress TMPDIR [buildpaths] warning

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,4 +22,11 @@ PREFERRED_VERSION_nuget-native ?= "5.2.0"
 PREFERRED_VERSION_msbuild ?= "16.10.1"
 PREFERRED_VERSION_msbuild-native ?= "16.10.1"
 
+# Suppress TMPDIR [buildpaths] warning
+INSANE_SKIP:mono += "buildpaths"
+INSANE_SKIP:msbuild += "buildpaths"
+INSANE_SKIP:python3-clr-loader += "buildpaths"
+INSANE_SKIP:python3-pythonnet += "buildpaths"
+INSANE_SKIP:dotnet-helloworld += "buildpaths"
+
 LAYERSERIES_COMPAT_mono = "kirkstone langdale mickledore nanbield"
