--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -23,10 +23,14 @@ PREFERRED_VERSION_msbuild ?= "16.10.1"
 PREFERRED_VERSION_msbuild-native ?= "16.10.1"
 
 # Suppress TMPDIR [buildpaths] warning
-INSANE_SKIP:mono += "buildpaths"
+INSANE_SKIP:mono-dbg += "buildpaths"
+INSANE_SKIP:mono-gac += "buildpaths"
+INSANE_SKIP:mono-configuration-crypto += "buildpaths"
+INSANE_SKIP:mono-xbuild += "buildpaths"
+INSANE_SKIP:mono-libs-4.5 += "buildpaths"
 INSANE_SKIP:msbuild += "buildpaths"
+INSANE_SKIP:msbuild-dev += "buildpaths"
 INSANE_SKIP:python3-clr-loader += "buildpaths"
 INSANE_SKIP:python3-pythonnet += "buildpaths"
-INSANE_SKIP:dotnet-helloworld += "buildpaths"
 
 LAYERSERIES_COMPAT_mono = "kirkstone langdale mickledore nanbield"
