--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,4 +22,12 @@ PREFERRED_VERSION_nuget-native ?= "5.2.0"
 PREFERRED_VERSION_msbuild ?= "16.6"
 PREFERRED_VERSION_msbuild-native ?= "16.6"
 
+# Suppress TMPDIR [buildpaths] warning
+INSANE_SKIP:mono-dbg += "buildpaths"
+INSANE_SKIP:mono-libs-4.5 += "buildpaths"
+INSANE_SKIP:msbuild += "buildpaths"
+INSANE_SKIP:msbuild-dev += "buildpaths"
+INSANE_SKIP:python3-clr-loader += "buildpaths"
+INSANE_SKIP:python3-pythonnet += "buildpaths"
+
 LAYERSERIES_COMPAT_mono = "dunfell gatesgarth hardknott honister kirkstone"
