--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         dotnet_version: [8.0.201, 6.0.419]
         mono_version: [6.12.0.182]
-        branch: [nanbield]
+        branch: [honister]
         arch: [x86-64, arm, arm64]
     env:
       name: build-and-test
