--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
       - master-next
-      - nanbield
+      - scarthgap
   pull_request:
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
       matrix:
         dotnet_version: [8.0.301, 6.0.423]
         mono_version: [6.12.0.182]
-        branch: [nanbield]
+        branch: [scarthgap]
         arch: [x86-64, arm, arm64]
     env:
       name: build-and-test
