--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -20,7 +20,7 @@ jobs:
         dotnet_version: [8.0.303, 6.0.424]
         mono_version: [6.12.0.182]
         branch: [styhead]
-        arch: [x86-64, arm, arm64]
+        arch: [x86-64, arm64]
     env:
       name: build-and-test
       MONO_VERSION: ${{ matrix.mono_version }}
