--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
       - master-next
-      - styhead
+      - walnascar
   pull_request:
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
       matrix:
         dotnet_version: [8.0.303, 6.0.424]
         mono_version: [6.12.0.206]
-        branch: [styhead]
+        branch: [walnascar]
         arch: [x86-64, arm64]
     env:
       name: build-and-test
