--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -7,7 +7,8 @@ on:
       - master-next
       - walnascar
   pull_request:
-
+    paths-ignore:
+      - "**.md"
 jobs:
   build-and-test:
     runs-on: [self-hosted, linux, X64]
