--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         dotnet_version: [8.0.303, 6.0.424]
         mono_version: [6.12.0.206]
-        branch: [walnascar]
+        branch: [master]
         arch: [x86-64, arm64]
     env:
       name: build-and-test
