--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - master
-      - master-next
-      - walnascar
   pull_request:
     paths-ignore:
       - "**.md"
@@ -20,7 +18,7 @@ jobs:
       matrix:
         dotnet_version: [8.0.303, 6.0.424]
         mono_version: [6.12.0.206]
-        branch: [master]
+        branch: [styhead]
         arch: [x86-64, arm64]
     env:
       name: build-and-test
