Fix CVE check typo
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -93,8 +93,8 @@ jobs:
       run: |
         . ./${BRANCH}/poky/oe-init-build-env ${BRANCH}/build
         export TERM=linux
-        bitbake mono -c cve-check
-        bitbake dotnet -c cve-check
+        bitbake mono -c cve_check
+        bitbake dotnet -c cve_check
     - name: Testing
       run: |
         . ./${BRANCH}/poky/oe-init-build-env ${BRANCH}/build
