--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -102,6 +102,7 @@ jobs:
       run: |
         . ./${BRANCH}/poky/oe-init-build-env ${BRANCH}/build
         export TERM=linux
+        adduser $USER kvm
         bitbake test-image-mono -c testimage
     - name: Store artifacts
       uses: actions/upload-artifact@v4
