layer-wide: Add whinlatter compatibility
Add whinlatter to LAYERSERIES_COMPAT in conf/layer.conf.

Add an abstract MONO_GIT_S setting in conf/layer.conf so recipes
that use git:// in SRC_URI can work in styhead, walnascar and
whinlatter, despite the different target directory for sources.

Use MONO_GIT_S in recipe that use git:// in SRC_URI.

Signed-off-by: Zoltán Böszörményi <zboszor@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -30,4 +30,9 @@ INSANE_SKIP:msbuild-dev += "buildpaths"
 INSANE_SKIP:python3-clr-loader += "buildpaths"
 INSANE_SKIP:python3-pythonnet += "buildpaths"
 
-LAYERSERIES_COMPAT_mono = "styhead walnascar"
+LAYERSERIES_COMPAT_mono = "styhead walnascar whinlatter"
+
+MONO_WHINLATTER_S = "${UNPACKDIR}/${BB_GIT_DEFAULT_DESTSUFFIX}"
+MONO_NON_WHINLATTER_S = "${WORKDIR}/git"
+
+MONO_GIT_S = '${@bb.utils.contains_any("LAYERSERIES_CORENAMES", "whinlatter", d.getVar("MONO_WHINLATTER_S"), d.getVar("MONO_NON_WHINLATTER_S"), d)}'
