--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         dotnet_version: [8.0.406, 6.0.428]
         mono_version: [6.14.1]
-        branch: [styhead, walnascar, master]
+        branch: [walnascar, master]
         arch: [x86-64, arm, arm64]
     env:
       name: build-and-test
